2011-01-23  Ilya Tikhonovsky  <loislo@chromium.org>

        Unreviewed build fix.

        Web Inspector: looks like efl doesn't regenerate InspectorBackendDispatcher.

        Touch Inspector.idl.

        * inspector/Inspector.idl:

2011-01-22  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: next step in splitting InspectorController.

        Splitting InspectorController is a bit tricky process.

        As a first step I'll do the next things:
        1) rename existing InspectorController to InspectorAgent;
        2) s/nspectorController/nspectorAgent/g everywhere in WebCore/inspector but InspectorInstrumentation;
        3) create a fake InspectorController derived from the InspectorAgent for the rest of WebCore and WebKit;

        The second step is a migration of a small set of functions described in bug 52510 from InspectorAgent to InspectorController.

        As far as the second step will have significant changes in the functions' implementation I'll do it as a separate patch.

        https://bugs.webkit.org/show_bug.cgi?id=52955

        * CMakeLists.txt:
        * GNUmakefile.am:
        * WebCore.exp.in:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSInjectedScriptHostCustom.cpp:
        (WebCore::JSInjectedScriptHost::nodeForId):
        (WebCore::JSInjectedScriptHost::selectDOMStorage):
        * bindings/v8/custom/V8InjectedScriptHostCustom.cpp:
        (WebCore::V8InjectedScriptHost::nodeForIdCallback):
        * inspector/CodeGeneratorInspector.pm:
        * inspector/InjectedScriptHost.cpp:
        (WebCore::InjectedScriptHost::InjectedScriptHost):
        (WebCore::InjectedScriptHost::clearConsoleMessages):
        (WebCore::InjectedScriptHost::databaseForId):
        (WebCore::InjectedScriptHost::selectDatabase):
        (WebCore::InjectedScriptHost::selectDOMStorage):